# mc_state_observation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  build  compile_commands.json
.github/workflows/: package.yaml
debian/: mc-state-observation.install  ros-ROS_DISTRO-mc-state-observation.install
etc/MCKineticsObserver/robots/: hrp5_p.yaml  jvrc1.yaml
etc/observers/: MCKineticsObserver.yaml
etc/observers/MCKineticsObserver/: hrp4cr.yaml  hrp5_p.yaml
include/mc_state_observation/: LegacyFlexibilityObserver.h  MCKineticsObserver.h  MCValinor.h  MCVanytEstimator.h  MCWaiko.h  MOCAPVisualizer.h  MocapVisualizer.h  NaiveLegOdometry.h  NaiveOdometry.h  TiltObserver.h  TiltVisual.h  kinematicsTools.h  svaKinematicsConversion.h
include/mc_state_observation/measurements/: Contact.h  ContactsManager.h  ContactsManager.hpp  ContactsManagerConfiguration.h
include/mc_state_observation/observersTools/: kinematicsTools.h  leggedOdometryTools.h  measurementsTools.h  measurementsTools.hpp
include/mc_state_observation/odometry/: LeggedOdometryManager.h  LeggedOdometryManager.hpp
src/: AttitudeObserver.cpp  CMakeLists.txt  LegacyFlexibilityObserver.cpp  MCKineticsObserver.cpp  MCValinor.cpp  MCVanytEstimator.cpp  MCWaiko.cpp  MOCAPVisualizer.cpp  MocapObserver.cpp  MocapVisualizer.cpp  NaiveLegOdometry.cpp  NaiveOdometry.cpp  ObjectObserver.cpp  TiltObserver.cpp  TiltVisual.cpp  kinematicsTools.cpp  svaKinematicsConversion.cpp
src/conversions/: kinematics.cpp
src/observersTools/: kinematicsTools.cpp  leggedOdometryTools.cpp  measurementsTools.cpp
src/odometry/: LeggedOdometryManager.cpp
tests/: mc_rtc.in.yaml
